<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/newsFragment"
        android:icon="@drawable/ic_newspaper_24"
        android:orderInCategory="1"
        android:title="@string/menu_news"
        app:showAsAction="always" />
    <item
        android:id="@+id/timetableFragment"
        android:icon="@drawable/ic_schedule_24"
        android:orderInCategory="2"
        android:title="@string/menu_timetable"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/servicesFragment"
        android:icon="@drawable/ic_application_24"
        android:orderInCategory="3"
        android:title="@string/menu_services"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_account_24"
        android:orderInCategory="5"
        android:title="@string/menu_profile"
        app:showAsAction="ifRoom" />
</menu>